basic header and footer styles

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <li>Contact</li>
         </ul>
     </header>
-    <div class="footer"></div>
+    <footer></footer>
 </body>
 
 </html>
