--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </ul>
     </header>
     <section class="container">
+        <img  id="profile-picture"src="https://placehold.it/250x250" alt="profile picture">
         <h2>About Me</h2>
-        <img src="" alt="">
-        <p></p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci laudantium.</p>
     </section>
-    <div class="footer"></div>
+    <footer>CopyRight</footer>
 </body> 
 </html>
