first page done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
 </head>
+
 <body>
     <header>
         <h1>
@@ -17,14 +19,26 @@
         <ul>
             <li>About</li>
             <li>Portfolio</li>
-            <li>Contact</li> 
+            <li>Contact</li>
         </ul>
     </header>
     <section class="container">
-        <img  id="profile-picture"src="https://placehold.it/250x250" alt="profile picture">
         <h2>About Me</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci laudantium.</p>
+        <img id="profile-picture" src="https://placehold.it/200x200" alt="profile picture">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore
+                eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
+                laudantium.
+            </p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore
+                eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
+                laudantium.
+            </p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore
+                eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
+                laudantium.
+            </p>
     </section>
-    <footer>CopyRight</footer>
-</body> 
+    <footer> CopyRight </footer>
+</body>
+
 </html>
