contact page done

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,25 @@
             <li>Contact</li>
         </ul>
     </header>
-    <footer></footer>
+    <form class="container">
+        <h2>Contact</h2>
+        <div class="inner-form">
+
+            <p>Name</p>
+            <br>
+            <input type="text" placeholder="John Smith">
+            <br>
+            <p>Email</p>
+            <br>
+            <input type="text" placeholder="example@example.com">
+            <br>
+            <p>Message</p>
+            <br>
+            <input id="textbox" type="textbox">
+            <div class="button">Submit</div>
+        </div>
+    </form>
+    <footer>copyright</footer>
 </body>
 
 </html>
