--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -29,16 +30,18 @@
                 eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
                 laudantium.
             </p>
+            <br>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore
                 eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
                 laudantium.
             </p>
+            <br>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore
                 eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
                 laudantium.
             </p>
     </section>
-    <footer> CopyRight </footer>
+    <footer> copyright</footer>
 </body>
 
 </html>
