--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,38 @@
             <li>Contact</li>
         </ul>
     </header>
-    <footer></footer>
+    <section class="container">
+        <h2>Portfolio</h2>
+        <div class="row">
+            <div class="float-left-container">
+                <img class="portfolio-photo" src="https://placehold.it/200x200" alt="pic1">
+                <h3> label #1 </h3>
+            </div>
+            <div class="float-right-container">
+                <img class="portfolio-photo" src="https://placehold.it/200x200" alt="pic1">
+                <h3> label #1 </h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="float-left-container">
+                <img class="portfolio-photo" src="https://placehold.it/200x200" alt="pic1">
+                <h3> label #1 </h3>
+            </div>
+            <div class="float-right-container">
+                <img class="portfolio-photo" src="https://placehold.it/200x200" alt="pic1">
+                <h3> label #1 </h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="float-left-container">
+                <img class="portfolio-photo" src="https://placehold.it/200x200" alt="pic1">
+                <h3> label #1 </h3>
+            </div>
+        </div>
+        </div>
+
+    </section>
+    <footer>copyright</footer>
 </body>
 
 </html>
