added href attributes to navbar list items

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,28 +17,31 @@
             Matt Lomet
         </h1>
         <ul>
-            <li>About</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
+                <li>
+                    <a href="index.html">About</a>
+                </li>
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
         </ul>
     </header>
     <section class="container">
         <h2>About Me</h2>
         <img id="profile-picture" src="https://placehold.it/200x200" alt="profile picture">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore
-                eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
-                laudantium.
-            </p>
-            <br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore
-                eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
-                laudantium.
-            </p>
-            <br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore
-                eveniet hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci
-                laudantium.
-            </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore eveniet
+            hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci laudantium.
+        </p>
+        <br>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore eveniet
+            hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci laudantium.
+        </p>
+        <br>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ipsam! Illum provident ducimus enim? Tempore eveniet
+            hic fugit unde assumenda provident architecto facilis, soluta sint neque quasi doloremque adipisci laudantium.
+        </p>
     </section>
     <footer> copyright</footer>
 </body>
