--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,15 @@
             Matt Lomet
         </h1>
         <ul>
-            <li>About</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
+            <li>
+                <a href="index.html">About</a>
+            </li>
+            <li>
+                <a href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
         </ul>
     </header>
     <section class="container">
